# schedgehammer

./: .dockerignore  .gitignore  Dockerfile  README.md  benchmark.py  conv2d.json  graph.txt  main.py  plot_catbench.py  plot_results.py  prepare_test_data.sh  pyproject.toml  requirements.txt  run_artifact.sh  run_artifact_additional.sh  run_catbench.sh  run_docker_mm_benchmark.sh  run_docker_performance_distribution.sh  run_figure4.sh  run_figure5_taco_gemm.sh  run_figure5_taco_mttkrp.sh  run_figure5_taco_spmv.sh  run_figure5_tvm_2dconv.sh  run_figure5_tvm_conv2d.sh  run_figure5_tvm_mm.sh  run_figure5_tvm_mttkrp.sh  run_figure6.sh
benchmark/: .gitignore  PYATF_INTEGRATION.md  benchmark.py  convert_atf_results.py  convert_opentuner_results.py  interop_problem.py  opentuner_harris.py  opentuner_mttkrp.py  opentuner_spmv.py  plot_results.py  pyatf_benchmark.py  pyatf_harris.py  pyatf_mttkrp.py  pyatf_mttkrp_opentuner.py  pyatf_spmv.py  run_benchmark.py  test_atf.py  test_opentuner.py
examples/: compile_taco_api.sh  cost_distribution.py  load_archived_result.py  run_taco_tuning.sh  schedule_test.py  schedule_test_conv.py  schedule_test_old.py  taco.py  taco_api.cpp  taco_api_operations.py  taco_bindings.py  taco_example_runner.py  taco_program  tvm_api.py
kick_off_assignment/: assignment.md  cost.py  main.py
performance_distribution/: api.py  beat_ansor.py  mttkrp.py  mttkrp_taco.py  performance_distribution.py  performance_distribution_taco.py  plot.py  run_analysis.sh  run_taco_performance_distribution.sh  taco_performance_distribution.py
results/: results.json
(+101 files in other folders)
