[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "schedgehammer"
version = "0.1"
dependencies = [
  "numpy<=1.26.4",
  "matplotlib",
  "interopt<=0.2.1",
  "catbench @ git+https://github.com/anonymoussisef/catbench@main",
  "antlr4-python3-runtime",
  "apache-tvm",
  "xgboost",
  "pytest",
  "networkx",
]

[tool.setuptools]
ext-modules = [
  {name = "taco_bindings", sources = ["taco_bindings/bindings.cpp"], include-dirs = ["taco/include/"], library-dirs = ["taco/build/lib/"], libraries = ["taco"]}
]

[tool.setuptools.packages.find]
include = ["schedgehammer*"]

